# AP-2020-summer

./: CMakeLists.txt  README.md  main.cpp
Utilities/: Traits.hpp  Utilities.cpp  Utilities.hpp
